[project]
name = "robotics-vla"
version = "0.1.0"
description = "Vision-Language-Action model fine-tuning for robotics"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.9.1",
]

[[tool.uv.index]]
url = "https://scale-307185671274.d.codeartifact.us-west-2.amazonaws.com/pypi/scale-pypi/simple/"
